...
    android:layout_height="match_parent"
    android:paddingHorizontal="8dp"
    android:paddingVertical="12dp"
    tools:context=".ui.main.TaskDialogFragment">

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/createNewTask"
        android:imeOptions="actionSend"
        android:importantForAutofill="no"
        android:inputType="text"
...
